<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>za.net.hanro50</groupId>
	<artifactId>agenta</artifactId>
	<version>1.6.1</version>
	<properties>
		<maven.compiler.source>1.5</maven.compiler.source>
		<maven.compiler.target>1.5</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>za.net.hanro50.modloader</groupId>
			<artifactId>modloader</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/dependencies/Modloader.jar</systemPath>
			<optional />
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.20.0</version>
			<optional />
			<scope>provided</scope>
		</dependency>
		<dependency>
			<!--https://adfoc.us/serve/sitelinks/?id=271228&url=https://maven.minecraftforge.net/net/minecraftforge/forge/1.6.1-8.9.0.775/forge-1.6.1-8.9.0.775-universal.jar-->
			<groupId>net.minecraftforge</groupId>
			<artifactId>forge</artifactId>
			<version>1.6.1-8.9.0.775</version>
			<classifier>universal</classifier>
			<optional />
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.19.2-R0.1-SNAPSHOT</version>
			<optional />
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>Forge</id>
			<url>https://maven.minecraftforge.net/</url>
		</repository>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
	<build>
		<finalName>agent</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.9</source>
					<target>1.9</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.net.www.protocol.http=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<!-- Set a compiler level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<!-- Maven Shade Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<!-- Run shade goal on package phase -->
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>

						<configuration>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>

										<exclude>META-INF/versions/*</exclude>
									</excludes>
								</filter>
							</filters>
							<artifactSet>
								<excludes>
									<exclude>za.net.hanro50.modloader:*</exclude>
									<exclude>net.minecraftforge:*</exclude>
									<exclude>org.apache.logging.log4j:*</exclude>
								</excludes>
							</artifactSet>
							<transformers>

								<!-- add Main-Class to manifest file -->
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>